compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/functionAndProperty/object.kt
// RUN_PIPELINE_TILL: KLIB
object C {
    <!CONFLICTING_JVM_DECLARATIONS!>val x = 1<!>
    <!CONFLICTING_JVM_DECLARATIONS!>fun getX() = 1<!>
}
